<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

        <TextView
            android:id="@+id/data_input"
            android:text="@string/data_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
        <TextView
            android:id="@+id/Name"
            android:text="@string/Name"
            android:layout_below="@id/data_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/Last_Name"
            android:text="@string/Last_Name"
            android:layout_below="@id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/Age"
            android:text="@string/Age"
            android:layout_below="@id/Last_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/data_input"
            android:layout_toRightOf="@id/Name"
            android:layout_alignBottom="@id/Name"
            android:hint="@string/et_name"
            android:padding="8dp"
            />
        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_name"
            android:layout_toRightOf="@id/Last_Name"
            android:layout_alignBottom="@id/Last_Name"
            android:hint="@string/et_last_name"
            android:padding="8dp"
            />
        <EditText
            android:id="@+id/et_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_last_name"
            android:layout_toRightOf="@id/Age"
            android:layout_alignBottom="@id/Age"
            android:hint="@string/et_age"
            android:padding="8dp"
            android:inputType="number"
            android:maxLength="2"
            />
        <Button
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Age"

            android:layout_gravity="right"
            />
        <Button
            android:id="@+id/cancel"
            android:text="@string/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Age"
            android:layout_toRightOf="@id/save"

            />

    </RelativeLayout>
</ScrollView>
